--- a/le css.html
+++ b/le css.html
@@ -45,9 +45,12 @@
     <header>
       <h2 class="title2">La mise en place</h2>
     <nav class="pt1">
-      Crée un fichier puis ouvrez le avec VSC. Ensuite crée les deux fichier suivent
+      Crée une classe a votre titre et paragraphe
     </nav>
-      <img class="img1" src="https://cdn.discordapp.com/attachments/892315061572472842/955165776531300362/1.PNG">
+        <img class="img1" src="https://cdn.discordapp.com/attachments/892315061572472842/955524625108983838/unknown.png">
+      <nav class="pt3"> 
+        &lt;h1> <br> &lt;a class="title>Ceci est un titre&lt;/> <br> &lt;/h1> <br> <br> &lt;p class="pt1">Ceci est un paragraphe&lt;/p>
+      </nav>
     <nav class="pt2">
         Entrez dans index.html puis coller sa
     </nav>
