--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="pt5" style="text-align:center">&copy; Copyright 2022/2023 FagzyCorp</div>
     </footer>
     <div id="scrollUp">
-      <a href="#top"><img src="https://www.linuxtricks.fr/upload/to_top.png"/></a>
+      <a href="./index.html"><img src="https://www.linuxtricks.fr/upload/to_top.png"/></a>
       </div>
     </body>
 </html>
