--- a/le commencement.html
+++ b/le commencement.html
@@ -52,7 +52,7 @@
         Entrez dans index.html puis coller sa
     </nav>
     <nav class="pt3">
-    &lt;!DOCTYPE HTML> <br> &lt;html> <br> &lt;head> <br> &lt;title>Titre de la page&lt;/title> <br> &lt;/head> <br> &lt;body> <br><br> &lt;h1>Ceci est un titre&lt;/h1> <br> &lt;p>Ceci est un paragraphe&lt;/p> <br><br> &lt;/body> <br> &lt;/html>
+    &lt;!DOCTYPE HTML> <br> &lt;html> <br> &lt;head> <br> &lt;link href="index.css" rel="stylesheet" type="text/css"> <br> &lt;title>Titre de la page&lt;/title> <br> &lt;/head> <br> &lt;body> <br><br> &lt;h1> <br> Ceci est un titre <br> &lt;/h1> <br><br> &lt;nav> <br> Ceci est un paragraphe <br> &lt;/nav> <br><br> &lt;/body> <br> &lt;/html>
     </nav>
     <nav class="pt2">
       Puis lancer la page internet depuis votre fichier crée
@@ -85,7 +85,7 @@
       <div class="pt5" style="text-align:center">&copy; Copyright 2022/2023 FagzyCorp</div>
     </footer>
     <div id="scrollUp">
-      <a href="#top"><img src="https://www.linuxtricks.fr/upload/to_top.png"/></a>
+      <a href="./le commencement.html"><img src="https://www.linuxtricks.fr/upload/to_top.png"/></a>
       </div>
     </body>
 </html>
