--- a/le css.html
+++ b/le css.html
@@ -47,15 +47,15 @@
     <nav class="pt1">
       Crée une classe a votre titre et paragraphe
     </nav>
-        <img class="img1" src="https://cdn.discordapp.com/attachments/892315061572472842/955524625108983838/unknown.png">
+        <img class="img1" src="https://cdn.discordapp.com/attachments/892315061572472842/955889842514968576/unknown.png">
       <nav class="pt3"> 
-        &lt;h1> <br> &lt;a class="title>Ceci est un titre&lt;/> <br> &lt;/h1> <br> <br> &lt;p class="pt1">Ceci est un paragraphe&lt;/p>
+        &lt;h1> <br> &lt;a class="title>Ceci est un titre&lt;/a> <br> &lt;/h1> <br> <br> &lt;nav class="pt1"> <br> Ceci est un paragraphe <br> &lt;/nav>
       </nav>
     <nav class="pt2">
-        Entrez dans index.html puis coller sa
+        Aller dans index.css puis rentre sa 
     </nav>
     <nav class="pt3">
-    &lt;!DOCTYPE HTML> <br> &lt;html> <br> &lt;head> <br> &lt;title>Titre de la page&lt;/title> <br> &lt;/head> <br> &lt;body> <br><br> &lt;h1>Ceci est un titre&lt;/h1> <br> &lt;p>Ceci est un paragraphe&lt;/p> <br><br> &lt;/body> <br> &lt;/html>
+      a.title { <br> font-family: serif; <br> font-size: 60px; <br> padding: 0px 70px 0px; <br> text-decoration: none; <br> color: black; <br> } <br> <br> nav.pt1 { <br> font-family: serif; <br> font-size: 28px; <br> padding: 2px 70px 0px; <br> text-decoration: none; <br> color: black; <br> } 
     </nav>
     <nav class="pt2">
       Puis lancer la page internet depuis votre fichier crée
@@ -88,7 +88,7 @@
       <div class="pt5" style="text-align:center">&copy; Copyright 2022/2023 FagzyCorp</div>
     </footer>
     <div id="scrollUp">
-      <a href="#top"><img src="https://www.linuxtricks.fr/upload/to_top.png"/></a>
+      <a href="./le css.html"><img src="https://www.linuxtricks.fr/upload/to_top.png"/></a>
       </div>
     </body>
 </html>
