--- a/index.html
+++ b/index.html
@@ -2,17 +2,6 @@
 <html>
     <head>
       <style>
-        #scrollUp
-        {
-        position: fixed;
-        bottom : 10px;
-        right: -100px;
-        opacity: 0.5;
-        }
-        </style>
-         
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
-      <style>
       @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
       </style>
     <link href="index.css" rel="stylesheet" type="text/css">
@@ -75,18 +64,15 @@
             <ul>
               <li class="menu-item"><a href="./le commencement.html">Le Commencement (HTML)</a></li>
               <li class="menu-item"><a href="./le css.html">La mise en place (CSS)</a></li>
-              <li class="menu-item"><a href="#page3">Page 3</a></li>
+              <li class="menu-item"><a href="./explication.html">Explication (HTML et CSS)</a></li>
               <li class="menu-item"><a href="#page4">Page 4</a></li>
             </ul>
         </nav>
     </header>
       </body>
-    <script src="menu.js"></script>
+    <script src="menu.js"></script>         
     <footer>
       <div class="pt5" style="text-align:center">&copy; Copyright 2022/2023 FagzyCorp</div>
     </footer>
-    <div id="scrollUp">
-      <a href="./index.html"><img src="https://www.linuxtricks.fr/upload/to_top.png"/></a>
-      </div>
     </body>
 </html>
