--- a/explication.html
+++ b/explication.html
@@ -4,7 +4,7 @@
       <style>
       @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
       </style>
-    <link href="le commencement.css" rel="stylesheet" type="text/css">
+    <link href="explication.css" rel="stylesheet" type="text/css">
         <title>FagzyCorp</title>
     </head>
 
@@ -32,23 +32,26 @@
 </h1>
 <li class="ligne1"></li>
     <header>
-      <h2 class="title2"> Le Commencement</h2>
+      <h2 class="title2">La mise en place</h2>
     <nav class="pt1">
-      Crée un fichier puis ouvrez le avec VSC. Ensuite crée les deux fichier suivent
+      Crée une classe a votre titre et paragraphe
     </nav>
-      <img class="img1" src="https://cdn.discordapp.com/attachments/892315061572472842/955165776531300362/1.PNG">
+        <img class="img1" src="https://cdn.discordapp.com/attachments/892315061572472842/955889842514968576/unknown.png">
+      <nav class="pt3"> 
+        &lt;h1> <br> &lt;a class="title>Ceci est un titre&lt;/a> <br> &lt;/h1> <br> <br> &lt;nav class="pt1"> <br> Ceci est un paragraphe <br> &lt;/nav>
+      </nav>
     <nav class="pt2">
-        Entrez dans index.html puis coller sa
+        Aller dans index.css puis rentre sa 
     </nav>
     <nav class="pt3">
-    &lt;!DOCTYPE HTML> <br> &lt;html> <br> &lt;head> <br> &lt;link href="index.css" rel="stylesheet" type="text/css"> <br> &lt;title>Titre de la page&lt;/title> <br> &lt;/head> <br> &lt;body> <br><br> &lt;h1> <br> Ceci est un titre <br> &lt;/h1> <br><br> &lt;nav> <br> Ceci est un paragraphe <br> &lt;/nav> <br><br> &lt;/body> <br> &lt;/html>
+      a.title { <br> font-family: serif; <br> font-size: 60px; <br> padding: 0px 70px 0px; <br> text-decoration: none; <br> color: black; <br> } <br> <br> nav.pt1 { <br> font-family: serif; <br> font-size: 28px; <br> padding: 2px 70px 0px; <br> text-decoration: none; <br> color: black; <br> } 
     </nav>
     <nav class="pt2">
-      Puis lancer la page internet depuis votre fichier crée
+      Rafraîchit la page et voila
     </nav>
-      <img class="img1" src="https://cdn.discordapp.com/attachments/892315061572472842/955189883855568916/2.PNG">
+      <img class="img1" src="https://cdn.discordapp.com/attachments/892315061572472842/955909757976334346/unknown.png">
     <nav class="pt4">
-      Pour la suite rendez-vous <a class="lien1" href="./le css.html">ici</a> pour la suite 
+      Pour plus d'explication rendez-vous <a class="lien1" href="./explication.html">ici</a> pour la suite 
     </nav>
       <!-- Menu déroulant -->
       <label for="menu-cb" class="menu-label">
