--- a/le css.html
+++ b/le css.html
@@ -2,17 +2,6 @@
 <html>
     <head>
       <style>
-        #scrollUp
-        {
-        position: fixed;
-        bottom : 10px;
-        right: -100px;
-        opacity: 0.5;
-        }
-        </style>
-         
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
-      <style>
       @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
       </style>
     <link href="le css.css" rel="stylesheet" type="text/css">
@@ -58,11 +47,11 @@
       a.title { <br> font-family: serif; <br> font-size: 60px; <br> padding: 0px 70px 0px; <br> text-decoration: none; <br> color: black; <br> } <br> <br> nav.pt1 { <br> font-family: serif; <br> font-size: 28px; <br> padding: 2px 70px 0px; <br> text-decoration: none; <br> color: black; <br> } 
     </nav>
     <nav class="pt2">
-      Puis lancer la page internet depuis votre fichier crée
+      Rafraîchit la page et voila
     </nav>
-      <img class="img1" src="https://cdn.discordapp.com/attachments/892315061572472842/955189883855568916/2.PNG">
+      <img class="img1" src="https://cdn.discordapp.com/attachments/892315061572472842/955909757976334346/unknown.png">
     <nav class="pt4">
-      Pour la suite rendez-vous <a class="lien1" href="./le css.html">ici</a> pour la suite 
+      Pour plus d'explication rendez-vous <a class="lien1" href="./explication.html">ici</a> pour la suite 
     </nav>
       <!-- Menu déroulant -->
       <label for="menu-cb" class="menu-label">
@@ -77,7 +66,7 @@
             <ul>
               <li class="menu-item"><a href="./le commencement.html">Le Commencement (HTML)</a></li>
               <li class="menu-item"><a href="le css.html">La mise en place (CSS)</a></li>
-              <li class="menu-item"><a href="#page3">Page 3</a></li>
+              <li class="menu-item"><a href="./explication.html">Explication (HTML et CSS)</a></li>
               <li class="menu-item"><a href="#page3">Page 4</a></li>
             </ul>
         </nav>
@@ -87,8 +76,5 @@
     <footer>
       <div class="pt5" style="text-align:center">&copy; Copyright 2022/2023 FagzyCorp</div>
     </footer>
-    <div id="scrollUp">
-      <a href="./le css.html"><img src="https://www.linuxtricks.fr/upload/to_top.png"/></a>
-      </div>
     </body>
 </html>
