--- a/explication.html
+++ b/explication.html
@@ -28,16 +28,20 @@
     <a class="title-left1" href="https://www.tiktok.com/@2_couz73">
         <img class="logo3" src="https://cdn.discordapp.com/attachments/892315061572472842/955163008244514816/Tiktok.png">
         TikTok
-    </a> 
+    </a>
+    <!-- balise 4 -->
+	  <a class="title-left1" href="https://twitter.com/VogzCorp">
+      <img class="logo2" src="https://upload.wikimedia.org/wikipedia/fr/thumb/c/c8/Twitter_Bird.svg/1200px-Twitter_Bird.svg.png"> 
+      Twitter
+  </a>
 </h1>
 <li class="ligne1"></li>
     <header>
-      <h2 class="title2">La mise en place</h2>
+      <h2 class="title2">Explication</h2>
     <nav class="pt1">
-      Crée une classe a votre titre et paragraphe
+      Explication du HTML
     </nav>
-        <img class="img1" src="https://cdn.discordapp.com/attachments/892315061572472842/955889842514968576/unknown.png">
-      <nav class="pt3"> 
+      <nav class="pt5"> 
         &lt;h1> <br> &lt;a class="title>Ceci est un titre&lt;/a> <br> &lt;/h1> <br> <br> &lt;nav class="pt1"> <br> Ceci est un paragraphe <br> &lt;/nav>
       </nav>
     <nav class="pt2">
