--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
     <a class="title-left1" href="https://www.tiktok.com/@2_couz73">
         <img class="logo3" src="https://cdn.discordapp.com/attachments/892315061572472842/955163008244514816/Tiktok.png">
         TikTok
-    </a> 
+    </a>
+    <!-- balise 4 -->
+	  <a class="title-left1" href="https://twitter.com/VogzCorp">
+		    <img class="logo2" src="https://upload.wikimedia.org/wikipedia/fr/thumb/c/c8/Twitter_Bird.svg/1200px-Twitter_Bird.svg.png"> 
+		    Twitter
+	  </a>
 </h1>
 <li class="ligne1"></li>
     <header>
